--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
 
       #mobile-controls {
         position: absolute;
-        bottom: 10%;
-        left: 40%;
+        bottom: 5%;
+        left: 50%;
+        transform: translate(-50%, 50%);
         z-index: 20;
         display: none;
         opacity: 0.7;
